src/test/deca/codegen/invalid/test_acces_non_init.deca
// Description:
//    Test le déreferencement invalid
// Resultats:
// Erreur : ima
// Historique:
//    cree le 01/01/2023

class B{
    int x;
}
class A{
    B b;
}

{
    B b;
    A a1 =  new A(); 
    A a2 =  new A(); 
    b.x=5;
}